--- a/res/layout/home_layout.xml
+++ b/res/layout/home_layout.xml
@@ -9,7 +9,7 @@
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:id="@+id/send_button"
-    	android:background="@drawable/background_gradient_drawable" android:clickable="true">
+    	android:background="@drawable/background_gradient_drawable" android:clickable="true" android:focusable="true">
     	<TextView 
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
     <RelativeLayout 
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
-    	android:id="@+id/send_button" android:background="@drawable/background_gradient_drawable_upsidedown" android:clickable="true">
+    	android:background="@drawable/background_gradient_drawable_upsidedown" android:clickable="true" android:id="@+id/incoming_button" android:focusable="true">
     	<TextView 
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
@@ -53,6 +53,31 @@
 	    	android:layout_marginRight="8dp"
 	    	android:layout_marginLeft="8dp" 
 	    	android:layout_marginTop="4dp" android:src="@drawable/incoming_arrow" android:scaleType="fitXY" android:layout_width="75dp" android:layout_height="75dp">
+    	</ImageView>
+    
+    </RelativeLayout>
+    
+    <RelativeLayout 
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    	android:background="@drawable/background_gradient_drawable" android:clickable="true" android:id="@+id/outgoing_button" android:focusable="true">
+    	<TextView 
+    		android:layout_width="wrap_content"
+    		android:layout_height="wrap_content"
+    		android:textSize="40sp" 
+    		android:textColor="#000000" 
+    		android:layout_marginLeft="10dp" 
+    		android:layout_centerHorizontal="true"
+    		android:layout_centerVertical="true"
+    		android:layout_toLeftOf="@+id/crosshairs" android:text="@string/outgoing">
+    	</TextView>
+    	<ImageView 
+	    	android:id="@+id/crosshairs" 
+	    	android:layout_alignParentTop="true" 
+	    	android:layout_alignParentRight="true" 
+	    	android:layout_marginRight="8dp"
+	    	android:layout_marginLeft="8dp" 
+	    	android:layout_marginTop="4dp" android:scaleType="fitXY" android:layout_width="75dp" android:layout_height="75dp" android:src="@drawable/outgoing_arrow">
     	</ImageView>
     
     </RelativeLayout>
