--- a/res/layout/home_layout.xml
+++ b/res/layout/home_layout.xml
@@ -1,84 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:background="#00008B"
     >
     
     <RelativeLayout 
-    	android:layout_width="fill_parent"
+    	android:layout_width="220dp"
     	android:layout_height="wrap_content"
     	android:id="@+id/send_button"
-    	android:background="@drawable/background_gradient_drawable" android:clickable="true" android:focusable="true">
-    	<TextView 
-    		android:layout_width="wrap_content"
-    		android:layout_height="wrap_content"
-    		android:text="@string/send" 
-    		android:textSize="80sp" 
-    		android:textColor="#000000" 
-    		android:layout_marginLeft="10dp" 
-    		android:layout_centerHorizontal="true"
-    		android:layout_toLeftOf="@+id/crosshairs">
-    	</TextView>
-    	<ImageView 
-	    	android:src="@drawable/crosshairs" 
-	    	android:id="@+id/crosshairs" 
-	    	android:layout_alignParentTop="true" 
-	    	android:layout_alignParentRight="true" 
-	    	android:layout_marginRight="8dp"
-	    	android:layout_marginLeft="8dp" 
-	    	android:layout_marginTop="4dp" android:layout_width="75dp" android:layout_height="75dp">
+    	android:background="@drawable/background_gradient_drawable" 
+    	android:clickable="true" 
+    	android:focusable="true"
+    	android:layout_marginTop="20dp"
+    	android:layout_marginBottom="20dp"
+    	android:layout_above="@+id/incoming_button" 
+    	android:layout_centerHorizontal="true"
+    	android:padding="4dp">
+    	<TextView android:textColor="#000000" 
+    		android:layout_height="wrap_content" 
+    		android:text="SEND" 
+    		android:layout_width="wrap_content" 
+    		android:textSize="40sp" 
+    		android:layout_alignParentTop="true" 
+    		android:layout_centerHorizontal="true" 
+    		android:id="@+id/textView1"></TextView>
+    	<ImageView android:id="@+id/crosshairs" 
+    	android:src="@drawable/crosshairs" 
+    	android:layout_width="75dp" 
+    	android:layout_height="75dp" 
+    	android:layout_below="@+id/textView1" 
+    	android:layout_centerHorizontal="true">
     	</ImageView>
     
     </RelativeLayout>
     
     <RelativeLayout 
-    	android:layout_width="fill_parent"
+    	android:layout_width="220dp"
     	android:layout_height="wrap_content"
-    	android:background="@drawable/background_gradient_drawable_upsidedown" android:clickable="true" android:id="@+id/incoming_button" android:focusable="true">
+    	android:background="@drawable/background_gradient_drawable_upsidedown" 
+    	android:clickable="true" 
+    	android:id="@+id/incoming_button" 
+    	android:focusable="true"
+    	android:layout_centerInParent="true"
+    	android:padding="4dp">
     	<TextView 
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:textSize="40sp" 
     		android:textColor="#000000" 
-    		android:layout_marginLeft="10dp" 
-    		android:layout_centerHorizontal="true"
-    		android:layout_centerVertical="true"
-    		android:layout_toLeftOf="@+id/crosshairs" android:text="@string/incoming">
+    		android:text="@string/incoming"
+    		android:id="@+id/incoming_text"
+    		android:layout_centerHorizontal="true" >
     	</TextView>
     	<ImageView 
-	    	android:id="@+id/crosshairs" 
-	    	android:layout_alignParentTop="true" 
-	    	android:layout_alignParentRight="true" 
-	    	android:layout_marginRight="8dp"
-	    	android:layout_marginLeft="8dp" 
-	    	android:layout_marginTop="4dp" android:src="@drawable/incoming_arrow" android:scaleType="fitXY" android:layout_width="75dp" android:layout_height="75dp">
-    	</ImageView>
+    		android:id="@+id/left_arrow" 
+    		android:src="@drawable/incoming_arrow" 
+    		android:layout_width="75dp" 
+    		android:layout_height="75dp" 
+    		android:scaleType="fitXY"  
+    		android:layout_centerHorizontal="true"
+    		android:layout_below="@+id/incoming_text">
+    		</ImageView>
     
     </RelativeLayout>
     
     <RelativeLayout 
-    	android:layout_width="fill_parent"
+    	android:layout_width="220dp"
     	android:layout_height="wrap_content"
-    	android:background="@drawable/background_gradient_drawable" android:clickable="true" android:id="@+id/outgoing_button" android:focusable="true">
+    	android:background="@drawable/background_gradient_drawable" 
+    	android:clickable="true" 
+    	android:id="@+id/outgoing_button" 
+    	android:focusable="true"
+    	android:layout_marginTop="20dp"
+    	android:layout_marginBottom="20dp"
+    	android:layout_below="@+id/incoming_button"
+    	android:layout_centerHorizontal="true"
+    	android:padding="4dp">
     	<TextView 
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
     		android:textSize="40sp" 
     		android:textColor="#000000" 
-    		android:layout_marginLeft="10dp" 
     		android:layout_centerHorizontal="true"
-    		android:layout_centerVertical="true"
-    		android:layout_toLeftOf="@+id/crosshairs" android:text="@string/outgoing">
+    		android:layout_toLeftOf="@+id/crosshairs" 
+    		android:text="@string/outgoing"
+    		android:id="@+id/outgoing_text">
     	</TextView>
     	<ImageView 
-	    	android:id="@+id/crosshairs" 
-	    	android:layout_alignParentTop="true" 
-	    	android:layout_alignParentRight="true" 
-	    	android:layout_marginRight="8dp"
-	    	android:layout_marginLeft="8dp" 
-	    	android:layout_marginTop="4dp" android:scaleType="fitXY" android:layout_width="75dp" android:layout_height="75dp" android:src="@drawable/outgoing_arrow">
+	    	android:id="@+id/right_arrow" 
+	    	android:scaleType="fitXY" 
+	    	android:layout_height="75dp" 
+	    	android:src="@drawable/outgoing_arrow" 
+	    	android:layout_width="75dp"
+	    	android:layout_below="@+id/outgoing_text"
+	    	android:layout_centerHorizontal="true">
     	</ImageView>
     
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
