--- a/res/layout/map_location_layout.xml
+++ b/res/layout/map_location_layout.xml
@@ -4,13 +4,26 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-
+	<TextView 
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:padding="10dp"
+		android:text="206-465-1374"
+		android:layout_centerHorizontal="true"
+		android:layout_alignParentTop="true"
+		android:id="@+id/number_text"
+		android:gravity="center"
+		android:textSize="28dp"
+		android:background="@drawable/list_item_background"
+		android:textStyle="bold"
+		></TextView>		
     <com.google.android.maps.MapView
         android:id="@+id/mapview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:clickable="true"
         android:apiKey="0GyZwXAf3dZOSIzw42VKBnThdJEBxIRuKnOkPwQ"
+        android:layout_below="@+id/number_text"
     />
 
 </RelativeLayout>
