--- a/res/layout-land/home_layout.xml
+++ b/res/layout-land/home_layout.xml
@@ -36,12 +36,11 @@
     
     <RelativeLayout 
     	android:layout_height="wrap_content"
-    	android:background="@drawable/background_gradient_drawable_upsidedown" 
     	android:clickable="true" 
     	android:id="@+id/incoming_button" 
     	android:focusable="true"
     	android:layout_centerInParent="true"
-    	android:padding="4dp" android:layout_width="150dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">
+    	android:padding="4dp" android:layout_width="150dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:background="@drawable/background_gradient_drawable">
     	<TextView 
     		android:layout_width="wrap_content"
     		android:layout_height="wrap_content"
