--- a/res/layout/home_layout.xml
+++ b/res/layout/home_layout.xml
@@ -26,12 +26,12 @@
     		android:textSize="40sp" 
     		android:layout_alignParentTop="true" 
     		android:layout_centerHorizontal="true" 
-    		android:id="@+id/textView1"></TextView>
+    		android:id="@+id/send_text"></TextView>
     	<ImageView android:id="@+id/crosshairs" 
     	android:src="@drawable/crosshairs" 
     	android:layout_width="75dp" 
     	android:layout_height="75dp" 
-    	android:layout_below="@+id/textView1" 
+    	android:layout_below="@+id/send_text" 
     	android:layout_centerHorizontal="true">
     	</ImageView>
     
